--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 
   <!-- google icon -->
+  <style>span[class^="material"]{visibility: hidden;}</style>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <style>span[class^="material"]{visibility: visible;}</style>
 
 </head>
 
@@ -31,7 +33,7 @@
   <div class="lineMargin" m="30px"></div>
   
   <div class="content flex c">
-    <div class="tagLine" ff="Offside" fs="1.3em">Our <b>TieUps</b>... Our Pride.</div>
+    <div class="tagLine" ff="Offside" fs="1.3em">Our <b>TieUps</b>... 🇮🇳 Our Pride.</div>
     <div class="lineMargin" m="10px"></div>
     <p>Offer is <u>valid</u>, Only if you <b>install from here</b>.</p>
     <div class="appPan flex w100p">
@@ -40,6 +42,10 @@
       <script src="js/makeAppList.js"></script>
 
     </div>
+  </div>
+
+  <div class="foot">
+    
   </div>
 
   <!--  
