--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 
   <!-- google icon -->
-  <style>span[class^="material"]{visibility: hidden;}</style>
+  <style>span[class^="material"]{display: none;}</style>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <style>span[class^="material"]{visibility: visible;}</style>
+  <style>span[class^="material"]{display: inline-block;}</style>
 
 </head>
 
@@ -44,10 +44,7 @@
     </div>
   </div>
 
-  <div class="foot">
-    
-  </div>
-
+  <script src='js/makeFooter.js'></script>
   <!--  
   <div class="lineMargin" w="20%" h="1px" m="100px" bg="#666"></div>
   <p fs="2em" col="#f00" fw="bold" ff="calibri">hey</p>
