--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       <script src="js/makeAppList.js"></script>
 
     </div>
+    <div class="lineMargin" m='30px'></div>
+    <h2 col="#999">/...We are <b>working hard</b> to <u>tie up with more companies</u>.</h2>
   </div>
 
   <script src='js/makeFooter.js'></script>
