--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
       <script src="js/makeAppList.js"></script>
 
     </div>
-    <div class="lineMargin" m='30px'></div>
-    <h2 col="#999">/...We are <b>working hard</b> to <u>tie up with more companies</u>.</h2>
+    <h4 style="text-align: center; padding: 30px 10px" col="#999">/...We are <b>working hard</b> to <u>tie up with more companies</u>.</h4>
   </div>
 
   <script src='js/makeFooter.js'></script>
