--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="info">
     <div class="verifiedBox">
-      <strong class="flex" fs="1.2em" ff="Offside" col="green"><span class="material-symbols-outlined">verified</span> Trusted</strong>
+      <strong class="flex" fs="1.2em" ff="Offside" col="green"><span class="material-symbols-outlined">verified</span><p>Trusted</p></strong>
     </div>    
   </div>
 
