--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Refer & Earn Apps for Teenagers - No Document Earning Apps</title>
 
+  <meta name="description" content="All the EARNING APPS are here with Special Offers on each. Start Earning now with ₹0 investment. You can earn while you download and earn more whene you refer to somebody." />
+  <meta name="keywords" content="top refer and earn apps, refer and earn, money now, money now offer app, apps on offer">
+  <meta name="author" content="Priyanshu Kumar">
+  <meta name="google-site-verification" content="PRevEAasLsr0bAa7RarwMOn3dydkdRKWC0RjVwdjT0I" />
+
   <script src="js/script.js"></script>
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/ui.css">
   <script src='js/icons.js'></script>
-
 
   <!-- google icon -->
   <style>span[class^="material"]{display: none;}</style>
