--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Refer & Earn Apps for Teenagers - No Document Earning Apps</title>
+  <title>Money Now - Refer Now & Earn Apps : Both Pan & No Pan Apps</title>
 
   <meta name="description" content="All the EARNING APPS are here with Special Offers on each. Start Earning now with ₹0 investment. You can earn while you download and earn more whene you refer to somebody." />
   <meta name="keywords" content="top refer and earn apps, refer and earn, money now, money now offer app, apps on offer">
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <style>span[class^="material"]{display: inline-block;}</style>
 
+  <script src="js/appList.js"></script>
 </head>
 
 <body>
@@ -42,7 +43,6 @@
     <p>Offer is <u>valid</u>, Only if you <b>install from here</b>.</p>
     <div class="appPan flex w100p">
 
-      <script src="js/appList.js"></script>
       <script src="js/makeAppList.js"></script>
 
     </div>
