--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="content flex c">
     <div class="tagLine" ff="Offside" fs="1.3em">Our <b>TieUps</b>... 🇮🇳 Our Pride.</div>
     <div class="lineMargin" m="10px"></div>
-    <p>Offer is <u>valid</u>, Only if you <b>install from here</b>.</p>
+    <p class="texCen">Offer is <u>valid</u>, Only if you <b>install from here</b>.</p>
     <div class="appPan flex w100p">
 
       <script src="js/makeAppList.js"></script>
