--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="lineMargin" m="30px"></div>
   
   <div class="content flex c">
-    <div class="tagLine" ff="Offside" fs="1.3em">Our <b>TieUps</b>... 🇮🇳 Our Pride.</div>
+    <div class="tagLine texCen" ff="Offside" fs="1.3em">Our <b>TieUps</b>... 🇮🇳 Our Pride.</div>
     <div class="lineMargin" m="10px"></div>
     <p class="texCen">Offer is <u>valid</u>, Only if you <b>install from here</b>.</p>
     <div class="appPan flex w100p">
