--- a/index.html
+++ b/index.html
@@ -26,16 +26,7 @@
 
 <body>
   <script src='js/makeHead.js'></script>
-
-  <div class="lineMargin" m="30px"></div>
-
-  <div class="info">
-    <div class="verifiedBox">
-      <strong class="flex" fs="1.2em" ff="Offside" col="green"><span class="material-symbols-outlined">verified</span><p>Trusted</p></strong>
-    </div>    
-  </div>
-
-  <div class="lineMargin" m="30px"></div>
+  <script src="js/makeVerified.js"></script>
   
   <div class="content flex c">
     <div class="tagLine texCen" ff="Offside" fs="1.3em">Our <b>TieUps</b>... 🇮🇳 Our Pride.</div>
