--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google" content="notranslate">
   <meta name="theme-color" content="#c964d6">
-  <title>Alternatives of Google ads - At Offer now - no Eligibiliey (Propellar Ads, A-ADS, Adsterra & 5+)</title>
+  <title>Money Now - Refer Now & Earn Apps : Both Pan & No Pan Apps</title>
 
-  <meta name="description" content="The page contains all the ad-network that provide high cpm and can be applied to all kind of website and apps no EligibilieyAll the EARNING APPS are here with Special Offers on each if you sign up from our tieups." />
+  <meta name="description" content="All the EARNING APPS are here with Special Offers on each. Start Earning now with ₹0 investment. You can earn while you download and earn more whene you refer to somebody." />
   <meta name="keywords" content="top refer and earn apps, refer and earn, money now, money now offer app, apps on offer">
   <meta name="author" content="Priyanshu Kumar">
   <meta name="google-site-verification" content="PRevEAasLsr0bAa7RarwMOn3dydkdRKWC0RjVwdjT0I" />
@@ -29,27 +29,22 @@
 </head>
 
 <body>
+	<script>
+		var expandedHeader=false;
+	</script>
   <script src='js/makeHead.js'></script>
-  <script src="js/makeVerified.js"></script>
 
+  <div class="lineMargin" m="60px"></div>
+
+  <link rel="stylesheet" href="app/style.css">
+
+  <script src="app/makeSpecialAppData.js"></script>
+  
+  <div class="lineMargin" m="50px"></div>
 
   <div class="content flex c">
-    <div class="tagLine texCen" ff="Offside" fs="1.3em"><h2>High CPM Ad-Network</h2></div>
-    <div class="lineMargin" m="10px"></div>
-
-    <p class="texCen"a>These ad-networks can be applied to any website (Movie, Crypto etc) </p>
-    
-    <div class="lineMargin" m="10px"></div>
-
-    <p class="texCen">Offer is <u>valid</u>, Only if you <b>install from here</b>.</p>
-    <div class="appPan flex w100p">
-
-      <script src="js/makeAppList.js"></script>
-
-    </div>
-    <h4 style="text-align: center; padding: 30px 10px" col="#999">/...We are <b>working hard</b> to <u>tie up with more companies</u>.</h4>
+    <script src="app/makeRecoApps.js"></script>
   </div>
-
 
   <script>
     resetFormat();
