--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google" content="notranslate">
+  <meta name="theme-color" content="#c964d6">
+  <meta name="theme-color" content="#c964d6">
   <title>Money Now - Refer Now & Earn Apps : Both Pan & No Pan Apps</title>
 
   <meta name="description" content="All the EARNING APPS are here with Special Offers on each. Start Earning now with ₹0 investment. You can earn while you download and earn more whene you refer to somebody." />
