--- a/ads/index.html
+++ b/ads/index.html
@@ -1,7 +1,7 @@
 <!-- 
 USERS STATS (CASE SENSITIVE)
 
-<iframe src="https://money-now.netlify.app/ads" width="300px" height="125px"></iframe>
+<iframe src="https://money-now.netlify.app/ads" width="300px" height="125px" style="border-radius: 10px;" frameborder='0'></iframe>
 
 for genereal:
 just normal url || ?type=general;
