--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,8 @@
 	</script>
   <script src='js/makeHead.js'></script>
 
+  <div class="lineMargin" m="20px"></div>
+  <a href="/" style="text-decoration: none;"><button class="noBtn flex c" col="#0099ff" ff="Offside" style="border: 1px solid #0099ff; border-radius: 4px; padding: 5px 50px;"><span fs="1.45em">Home</span> <span fs=".9em">ALL APPS</span></button></a>
   <div class="lineMargin" m="60px"></div>
 
   <link rel="stylesheet" href="app/style.css">
